# psycopg2

./: .appveyor.yml  .bzrignore  .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  LICENSE  MANIFEST.in  Makefile  NEWS  NEWS-2.2  NEWS-2.3  README  README.async  README.rst  SECURITY.md  psycopg2.cproj  psycopg2.mdp  psycopg2.mds  psycopg2.sln  runtests.py  setup.cfg  setup.py  tox.ini
.appveyor/: cache_rebuild  packages.yml  tests.yml
.github/: FUNDING.yml  dependabot.yml
ZPsycopgDA/: DA.py  DABase.py  __init__.py  db.py  pool.py  test_da.py
debian/: README.zpsycopgda2  changelog  control  copyright  python-psycopg2da.dzproduct  rules  watch  zope-psycopgda2.dzproduct
doc/: .gitignore  COPYING.LESSER  ChangeLog-1.x  HACKING  Makefile  README  README.rst  SUCCESS  TODO  advanced.rst  api-screen.css  async.txt  code_of_conduct.rst  conf.py  connection.rst  cursor.rst  dbapi_extension.py  extensions.rst  extras.rst  index.rst  module.rst  pep-0249.txt  release.rst  requirements.txt  tz.rst  usage.rst
examples/: binary.py  copy_from.py  copy_to.py  cursor.py  dialtone.py  dict.py  dt.py  encoding.py  fetch.py  lastrowid.py  lobject.py  mogrify.py  myfirstrecipe.py  notify.py  simple.py  threads.py  typecast.py  tz.py  usercast.py
lib/: __init__.py  _ipaddress.py  _json.py  _py3.py  _range.py  compat.py  contextmanagers.py  errorcodes.py  errors.py  extensions.py  extras.py  pool.py  psycopg1.py  sql.py  tz.py
nz_include/: acPwcache.h  bitarch.h  c.h  comtypes.h  libpq-fe.h  nzfieldtype.h  os.h  pg_config.h  postgres_ext.h
psycopg/: _psycopg.vc9.manifest  adapter_asis.c  adapter_asis.h  adapter_binary.c  adapter_binary.h  adapter_datetime.c  adapter_datetime.h  adapter_list.c  adapter_list.h  adapter_mxdatetime.c  adapter_mxdatetime.h  adapter_pboolean.c  adapter_pboolean.h  adapter_pdecimal.c  adapter_pdecimal.h  adapter_pfloat.c  adapter_pfloat.h  adapter_pint.c  adapter_pint.h  column.h  (+66 more)
(+137 files in other folders)
