[build_ext]
# PSYCOPG_DEBUG can be added to enable verbose debug information
define=

# "pg_config" is required to locate PostgreSQL headers and libraries needed to
# build psycopg2. If pg_config is not in the path or is installed under a
# different name set the following option to the pg_config full path.
pg_config=

# If the build system does not find the mx.DateTime headers, try
# setting its value to the right path.
mx_include_dir=

# For Windows only:
# Set to 1 if the PostgreSQL library was built with OpenSSL.
# Required to link in OpenSSL libraries and dependencies.
have_ssl=0

# Set to 1 to statically link against the postgresql client library.
static_libpq=0

# Add here eventual extra libraries required to link the module.
libraries=

[metadata]
license_file = LICENSE
